<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:layout_height="match_parent"
    android:background="@drawable/screen"
    tools:context=".ArkLogin">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_arkanoid"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/enter_your_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/enter_your_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/loginBtn"
        android:hint="@string/login"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rememberMeBox"
        android:text="@string/remember_me"
        android:textSize="18sp"

        />

    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="30sp"
        android:id="@+id/toRegister"
        android:text="@string/have_no_account_register_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>