<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/image"
    android:padding="10sp"
    android:layout_height="match_parent"
    tools:context=".MainPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arkanoid"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="150sp"
        android:textStyle="bold" />
    <TextView
        android:layout_marginStart="100dp"
        android:id="@+id/welcomeMess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />
    <Button
        android:backgroundTint="@color/green"
        android:background="@drawable/roundedbutton"
        android:layout_marginTop="50sp"
        android:layout_marginStart="80dp"
        android:width="175sp"
        android:height="80sp"
        android:id="@+id/playBtn"
        android:hint="@string/press_to_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginStart="80dp"
        android:layout_marginTop="20sp"
        android:width="175sp"
        android:height="80sp"
        android:background="@drawable/roundedbutton"
        android:id="@+id/dataBtn"
        android:hint="@string/game_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="20sp"
        android:backgroundTint="@color/red"
        android:width="175sp"
        android:height="80sp"
        android:background="@drawable/roundedbutton"
        android:layout_marginStart="80dp"
        android:id="@+id/logoutBtn"
        android:hint="@string/log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>