<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center"
    android:background="@drawable/image"
    tools:context=".LosingScreen">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_lost_your_score_is"
            android:gravity="center"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_50"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24sp" />
    </LinearLayout>
    <Button
        android:layout_marginTop="40dp"
        android:background="@drawable/roundedbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homeScreen"
        android:hint="@string/back_to_level_selection"/>


</LinearLayout>